Sonar corrections